[package]
name = "lash-llm-transport"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash", default-features = false }
lash-sansio = { path = "../lash-sansio" }
tokio = { workspace = true, features = ["time"] }
reqwest = { workspace = true, features = ["json", "query", "stream", "rustls"] }
bytes = { workspace = true }
