[package]
name = "lash-mode-rlm"
version.workspace = true
edition = "2024"
license.workspace = true

[features]
default = []
sqlite-store = ["lash/sqlite-store"]

[dependencies]
lash = { path = "../lash" }
lash-rlm-types = { path = "../lash-rlm-types" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
lash-sansio = { path = "../lash-sansio" }
lash-mode-standard = { path = "../lash-mode-standard" }
tokio = { version = "1", features = ["full"] }
