[package]
name = "lash-mode-rlm"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash" }
lashlang = { path = "../lashlang" }
lash-rlm-types = { path = "../lash-rlm-types" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.18"
tokio = { version = "1", features = ["rt", "sync"] }
tempfile = "3"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
lash-sansio = { path = "../lash-sansio" }
lash-mode-standard = { path = "../lash-mode-standard" }
