[package]
name = "lash-mode-rlmpure"
version.workspace = true
edition = "2024"
license.workspace = true

[features]
default = []
sqlite-store = ["lash/sqlite-store", "lash-mode-rlm/sqlite-store"]

[dependencies]
lash = { path = "../lash" }
lash-mode-rlm = { path = "../lash-mode-rlm" }
lash-rlm-types = { path = "../lash-rlm-types" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
