[package]
name = "lash-mode-standard"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash" }
lash-sansio = { path = "../lash-sansio" }
async-trait = "0.1"
serde_json = "1"

[features]
default = []
sqlite-store = ["lash/sqlite-store"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
