[package]
name = "lash-mode-standard"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash" }
async-trait = "0.1"
serde_json = "1"

[dev-dependencies]
lash-sqlite-store = { path = "../lash-sqlite-store" }
tokio = { version = "1", features = ["full"] }
