[package]
name = "lash-mode-standard"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash-core = { path = "../lash-core" }
async-trait = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
lash-sqlite-store = { path = "../lash-sqlite-store" }
tokio = { workspace = true, features = ["full"] }
