[package]
name = "lash-plugin-mcp"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash", default-features = false }
async-trait = { workspace = true }
base64 = { workspace = true }
rmcp = { workspace = true, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "client-side-sse",
    "reqwest",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "process", "rt", "macros", "time"] }
tracing = { workspace = true }

[dev-dependencies]
lash = { path = "../lash", default-features = false, features = ["testing"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
