[package]
name = "lash-plugin-observational-memory"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash" }
async-trait = "0.1"
chrono = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
lash = { path = "../lash", features = ["testing"] }
serde_json = "1"
