[package]
name = "lash-plugin-observational-memory"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash-core = { path = "../lash-core" }
async-trait = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
lash-core = { path = "../lash-core", features = ["testing"] }
serde_json = { workspace = true }
