[package]
name = "lash-plugin-plan-mode"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash" }
lash-default-tools = { path = "../lash-default-tools" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
lash = { path = "../lash", features = ["testing"] }
async-trait = "0.1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[package.metadata.cargo-machete]
ignored = ["schemars"]
