[package]
name = "lash-plugin-plan-mode"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash-core = { path = "../lash-core" }
lash-tool-apply-patch = { path = "../lash-tool-apply-patch" }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
lash-core = { path = "../lash-core", features = ["testing"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[package.metadata.cargo-machete]
ignored = ["schemars"]
