[package]
name = "lash-plugin-prompt-context"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
lash = { path = "../lash", features = ["testing"] }
tokio = { workspace = true, features = ["full"] }
