[package]
name = "lash-plugin-prompt-context"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash-core = { path = "../lash-core" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
lash-core = { path = "../lash-core", features = ["testing"] }
tokio = { workspace = true, features = ["full"] }
