[package]
name = "lash-plugin-rolling-history"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash" }
async-trait = "0.1"
sha2 = "0.10"

[dev-dependencies]
lash = { path = "../lash", features = ["testing"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tempfile = "3"
