[package]
name = "lash-plugin-rolling-history"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash" }
async-trait = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
lash = { path = "../lash", features = ["testing"] }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
