[package]
name = "lash-plugin-tool-discovery"
version.workspace = true
edition = "2024"
license.workspace = true

[features]
default = []
semantic-tool-search = ["dep:model2vec-rs"]

[dependencies]
lash-core = { path = "../lash-core" }
async-trait = { workspace = true }
model2vec-rs = { version = "0.1.4", optional = true }
serde_json = { workspace = true }
schemars = { workspace = true }
strsim = "0.11"

[dev-dependencies]
lash-core = { path = "../lash-core", features = ["testing"] }
tokio = { workspace = true, features = ["macros", "rt"] }
