[package]
name = "lash-plugin-ui-activity"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
lash = { path = "../lash" }
serde_json = { workspace = true }

[dev-dependencies]
lash = { path = "../lash", features = ["testing"] }
tokio = { workspace = true, features = ["full"] }
