[package]
name = "lash-provider-anthropic"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Anthropic API (Claude) provider for lash."

[dependencies]
lash = { path = "../lash" }
lash-sansio = { path = "../lash-sansio" }
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time", "macros"] }
uuid = { version = "1", features = ["v4"] }
