[package]
name = "lash-provider-anthropic"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Anthropic API (Claude) provider for lash."

[dependencies]
lash-core = { path = "../lash-core" }
lash-llm-transport = { path = "../lash-llm-transport" }
async-trait = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
