[package]
name = "lash-provider-auth"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
base64 = { workspace = true }
reqwest = { workspace = true, features = ["json", "query", "stream", "rustls"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
