[package]
name = "lash-provider-codex"
version.workspace = true
edition = "2024"
license.workspace = true
description = "OpenAI Codex OAuth provider for lash (ChatGPT Plus/Pro/Team)."

[dependencies]
lash = { path = "../lash" }
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
