[package]
name = "lash-provider-google"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Google OAuth (Gemini via Code Assist) provider for lash."

[dependencies]
lash = { path = "../lash" }
lash-sansio = { path = "../lash-sansio" }
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["time", "macros", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
