[package]
name = "lash-provider-google"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Google OAuth (Gemini via Code Assist) provider for lash."

[dependencies]
lash = { path = "../lash" }
lash-llm-transport = { path = "../lash-llm-transport" }
lash-provider-auth = { path = "../lash-provider-auth" }
async-trait = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
uuid = { workspace = true, features = ["v4"] }
